--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
-  app:
+  api:
     build: .
     container_name: well-monitor
-    command: uvicorn src.main:app --host 0.0.0.0 --port 80 --reload
+    command: uvicorn src.api:app --host 0.0.0.0 --port 80 --reload; /start.sh
     ports:
       - 80:80
       - 5678:5678
@@ -10,6 +10,14 @@ services:
       - .:/code
     depends_on:
       - redis
-
+  #monitor:
+  #  build: .
+  #  command: ./start.sh
+  #  volumes:
+  #    - .:/code
+  #  #devices:
+  #  #  - /dev/tty.usbserial-14520
+  #  depends_on:
+  #    - redis      
   redis:
     image: redis:alpine
