added serial read code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - LOGLEVEL=INFO
+      - SERIALPORT=/dev/ttyUSB0
+      - BAUDRATE=19200
     volumes:
       - .:/code
   #  #devices:
