added simulator container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,9 @@ services:
   monitor:
     build: .
     container_name: well-monitor-monitor
-    command: /usr/local/bin/python /code/src/monitor.py
+    group_add:
+      - dialout
+    command: /start-monitor.sh
     environment:
       - PYTHONUNBUFFERED=1
       - LOGLEVEL=INFO
@@ -21,9 +23,22 @@ services:
       - BAUDRATE=19200
     volumes:
       - .:/code
-  #  #devices:
-  #  #  - /dev/tty.usbserial-14520
+    devices:
+      - /dev/tty.usbserial-14520
     depends_on:
-      - redis      
+      - redis
+  # simulator:
+  #   build: .
+  #   container_name: well-monitor-simulator
+  #   command: /start-simulator.sh
+  #   environment:
+  #     - PYTHONUNBUFFERED=1
+  #     - LOGLEVEL=INFO
+  #     - SERIALPORT=/dev/ttyS20
+  #     - BAUDRATE=19200
+  #   volumes:
+  #     - .:/code
+  #   depends_on:
+  #     - monitor
   redis:
     image: redis:alpine
