--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     volumes:
       - .:/code
     devices:
-      - /dev/tty.usbserial-14520
+      - /dev/ttyUSB0
     depends_on:
       - redis
   # simulator:
