--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   api:
     build: .
     container_name: well-monitor-api
-    command: uvicorn src.api:app --host 0.0.0.0 --port 80 --reload
+    command: uvicorn src.web:app --host 0.0.0.0 --port 80 --reload
     ports:
       - 80:80
       - 5678:5678
