--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - SERIAL_PORT
       - BAUD_RATE
       - COMPOSE_PROFILES
+      - LOG_INTERVAL
     volumes:
       - .:/code
     depends_on:
